--- a/deb-packages/64bitsonly/exelinvst/CMakeLists.txt
+++ b/deb-packages/64bitsonly/exelinvst/CMakeLists.txt
@@ -65,7 +65,7 @@ set( CMAKE_CXX_STANDARD 14 )
 include_directories( ${WIN_INCLUDE} )
 
 add_executable( lin-vst-servertrack.exe ${LINVST_SVR_SRC} )
-set_target_properties(  lin-vst-servertrack.exe PROPERTIES COMPILE_FLAGS " ${CMAKE_CXX_FLAGS} -m64 -fPIC -O2 -DEMBED -DEMBEDDRAG -DWAVES -DTRACKTIONWM -DVESTIGE -DXECLOSE -DWCLASS -DNEWTIME" )
+set_target_properties(  lin-vst-servertrack.exe PROPERTIES COMPILE_FLAGS " ${CMAKE_CXX_FLAGS} -m64 -fPIC -O2 -DEMBED -DEMBEDDRAG -DWAVES -DTRACKTIONWM -DVESTIGE -DXECLOSE -DWCLASS -DNEWTIME -DINOUTMEM" )
 target_link_libraries( lin-vst-servertrack.exe pthread rt )
 
 install( TARGETS
