--- a/deb-packages/32bitonly/exelinvst/CMakeLists.txt
+++ b/deb-packages/32bitonly/exelinvst/CMakeLists.txt
@@ -60,7 +60,7 @@ include_directories( ${WIN_INCLUDE} )
 set( CMAKE_EXE_LINKER_FLAGS "-m32 -lpthread -lrt ${LINK_FLAGS}" )
 
 add_executable( lin-vst-server32lx.exe  ${LINVST_SVR_SRC} )
-set_target_properties( lin-vst-server32lx.exe PROPERTIES COMPILE_FLAGS "${CMAKE_CXX_FLAGS}  -m32 -O2 -DEMBED -DEMBEDDRAG -DWAVES -DVESTIGE -DXECLOSE -DWCLASS -DNEWTIME" )
+set_target_properties( lin-vst-server32lx.exe PROPERTIES COMPILE_FLAGS "${CMAKE_CXX_FLAGS}  -m32 -O2 -DEMBED -DEMBEDDRAG -DWAVES -DVESTIGE -DXECLOSE -DWCLASS -DNEWTIME -DINOUTMEM" )
 target_link_libraries( lin-vst-server32lx.exe pthread rt )
 
 install( TARGETS  lin-vst-server32lx.exe DESTINATION bin )
