--- a/deb-packages/32bitonly/CMakeLists.txt
+++ b/deb-packages/32bitonly/CMakeLists.txt
@@ -22,10 +22,10 @@ install(FILES ../convert/linvstconvert32 DESTINATION ${SCRIPT1_INSTALL_PATH} bin
       GROUP_EXECUTE GROUP_READ
       WORLD_EXECUTE WORLD_READ )
 
-install(FILES ../convert/pylinvstconvert-32bit DESTINATION ${SCRIPT1_INSTALL_PATH} bin
-      PERMISSIONS OWNER_EXECUTE OWNER_READ
-      GROUP_EXECUTE GROUP_READ
-      WORLD_EXECUTE WORLD_READ )
+# install(FILES ../convert/pylinvstconvert-32bit DESTINATION ${SCRIPT1_INSTALL_PATH} bin
+#      PERMISSIONS OWNER_EXECUTE OWNER_READ
+#      GROUP_EXECUTE GROUP_READ
+#      WORLD_EXECUTE WORLD_READ )
       
 install(FILES ../convert/linvstconvert32bit/linvstconvert DESTINATION ${SCRIPT1_INSTALL_PATH} bin
       PERMISSIONS OWNER_EXECUTE OWNER_READ
@@ -37,10 +37,10 @@ install(FILES ../convert/linvstconvert32bit/linvstconverttree DESTINATION ${SCRI
       GROUP_EXECUTE GROUP_READ
       WORLD_EXECUTE WORLD_READ )       
       
-install(FILES ./pylinvstconvert-32bit-batch DESTINATION ${SCRIPT1_INSTALL_PATH} bin
-      PERMISSIONS OWNER_EXECUTE OWNER_READ
-      GROUP_EXECUTE GROUP_READ
-      WORLD_EXECUTE WORLD_READ )	
+# install(FILES ./pylinvstconvert-32bit-batch DESTINATION ${SCRIPT1_INSTALL_PATH} bin
+#      PERMISSIONS OWNER_EXECUTE OWNER_READ
+#      GROUP_EXECUTE GROUP_READ
+#      WORLD_EXECUTE WORLD_READ )	
       
 install(FILES ../Readme DESTINATION ${SCRIPT1_INSTALL_PATH} share/LinVst
       PERMISSIONS OWNER_READ
