--- a/Standalone/Makefile-standalone-6432
+++ b/Standalone/Makefile-standalone-6432
@@ -11,9 +11,9 @@ PREFIX  = /usr
 BIN_DIR    = $(DESTDIR)$(PREFIX)/bin
 VST_DIR = ./vst
 
-BUILD_FLAGS  = -fPIC -O2 -DLVRT -DVST6432 -DWAVES -DVESTIGE -DNEWTIME -DINOUTMEM $(CXX_FLAGS)
-BUILD_FLAGS_WIN = -m64 -O2 -DVST6432 -DDRAG -DWINONTOP -DWAVES -DVESTIGE -DWCLASS -DNEWTIME -DINOUTMEM -I/usr/include/wine-development/windows -I/usr/include/wine-development/wine/windows -I/usr/include/wine/wine/windows
-BUILD_FLAGS_WIN32 = -m32 -O2 -DVST6432 -DDRAG -DWINONTOP -DWAVES -DVESTIGE -DWCLASS -DNEWTIME -DINOUTMEM -I/usr/include/wine-development/windows -I/usr/include/wine-development/wine/windows -I/usr/include/wine/wine/windows
+BUILD_FLAGS  = -fPIC -O2 -DLVRT -DVST6432 -DWAVES -DVESTIGE -DNEWTIME -DINOUTMEM -DCHUNKBUF $(CXX_FLAGS)
+BUILD_FLAGS_WIN = -m64 -O2 -DVST6432 -DDRAG -DWINONTOP -DWAVES -DVESTIGE -DWCLASS -DNEWTIME -DINOUTMEM -DCHUNKBUF -I/usr/include/wine-development/windows -I/usr/include/wine-development/wine/windows -I/usr/include/wine/wine/windows
+BUILD_FLAGS_WIN32 = -m32 -O2 -DVST6432 -DDRAG -DWINONTOP -DWAVES -DVESTIGE -DWCLASS -DNEWTIME -DINOUTMEM -DCHUNKBUF -I/usr/include/wine-development/windows -I/usr/include/wine-development/wine/windows -I/usr/include/wine/wine/windows
 
 # undefine WINONTOP for standard window behaviour
 
