--- a/deb-packages/64bits-32bits/liblinvst/CMakeLists.txt
+++ b/deb-packages/64bits-32bits/liblinvst/CMakeLists.txt
@@ -4,7 +4,7 @@
 SET(STATIC_LINKING FALSE )
 
 set( CMAKE_CXX_STANDARD 14 )
-set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -O2 -DLVRT -DVST6432 -DEMBED -DEMBEDDRAG -DWAVES -DTRACKTIONWM -DVESTIGE -DXECLOSE -DNEWTIME -DINOUTMEM" )
+set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -O2 -DLVRT -DVST6432 -DEMBED -DEMBEDDRAG -DWAVES -DTRACKTIONWM -DVESTIGE -DXECLOSE -DNEWTIME -DINOUTMEM -DCHUNKBUF")
 
 # Project Path.
 ###############
