--- a/Standalone/Makefile-standalone-64
+++ b/Standalone/Makefile-standalone-64
@@ -19,7 +19,7 @@ BUILD_FLAGS_WIN = -m64 -O2 -DDRAG -DWINONTOP -DWAVES -DVESTIGE -DWCLASS -DNEWTIM
 LINK_FLAGS   = $(LDFLAGS)
 
 LINK_PLUGIN = -shared -lpthread -ldl -lX11 -lX11 -lrt $(LINK_FLAGS)
-LINK_WINE   = -lpthread -lrt $(LINK_FLAGS)
+LINK_WINE   = -L/opt/wine-stable/lib64/wine -L/opt/wine-devel/lib64/wine -L/opt/wine-staging/lib64/wine -L/usr/lib/x86_64-linux-gnu/wine-development -lpthread -lrt $(LINK_FLAGS)
 
 TARGETS     = linvst.so lin-vst-serverst.exe
 
