--- a/TestVst/Makefile
+++ b/TestVst/Makefile
@@ -10,7 +10,7 @@ BUILD_FLAGS_WIN = -m64 -DVESTIGE -I/usr/include/wine-development/windows -I/usr/
 
 LINK_FLAGS   = $(LDFLAGS)
 
-LINK_WINE   = -L/usr/lib/x86_64-linux-gnu/wine-development -lpthread -lrt -lshell32 $(LINK_FLAGS)
+LINK_WINE   = -L/opt/wine-stable/lib64/wine -L/opt/wine-devel/lib64/wine -L/opt/wine-staging/lib64/wine -L/usr/lib/x86_64-linux-gnu/wine-development -lpthread -lrt -lshell32 $(LINK_FLAGS)
 
 TARGETS     = testvst.exe
 
