--- a/Remove-Focus/Makefile
+++ b/Remove-Focus/Makefile
@@ -15,16 +15,13 @@ BUILD_FLAGS  = -fPIC -O2 -DLVRT -DVST6432 -DXECLOSE -DEMBED -DEMBEDDRAG -DWAVES 
 # add -DFOCUS to the above line for alternative keyboard focus operation, add -DEMBEDRESIZE to the above line for window resizing
 BUILD_FLAGS_WIN = -m64 -O2 -DVST6432 -DXECLOSE -DEMBED -DEMBEDDRAG -DWAVES -DTRACKTIONWM -DVESTIGE -DNEWTIME -DINOUTMEM -DCHUNKBUF -DEMBEDRESIZE -I/usr/include/wine-development/windows -I/usr/include/wine-development/wine/windows -I/usr/include/wine/wine/windows
 # add -DEMBEDRESIZE to the above line for window resizing
-BUILD_FLAGS_WIN32 = -m32 -O2 -DVST6432 -DXECLOSE -DEMBED -DEMBEDDRAG -DWAVES -DTRACKTIONWM -DVESTIGE -DNEWTIME -DINOUTMEM -DCHUNKBUF -DEMBEDRESIZE -I/usr/include/wine-development/windows -I/usr/include/wine-development/wine/windows -I/usr/include/wine/wine/windows
-# add -DEMBEDRESIZE to the above line for window resizing
 
 LINK_FLAGS   = $(LDFLAGS)
 
 LINK_PLUGIN = -shared -lpthread -ldl -lX11 -lrt $(LINK_FLAGS)
 LINK_WINE   = -L/usr/lib/x86_64-linux-gnu/wine-development -lpthread -lrt $(LINK_FLAGS)
-LINK_WINE32   = -L/usr/lib/i386-linux-gnu/wine-development -lpthread -lrt $(LINK_FLAGS)
 
-TARGETS     = linvst.so lin-vst-servertrack.exe lin-vst-servertrack32.exe
+TARGETS     = linvst.so lin-vst-servertrack.exe
 
 # --------------------------------------------------------------
 
@@ -35,9 +32,6 @@ linvst.so: linvst.unix.o remotevstclient.unix.o remotepluginclient.unix.o paths.
 	
 lin-vst-servertrack.exe: lin-vst-server.wine.o remotepluginserver.wine.o paths.wine.o
 	$(WINECXX) -m64 $^ $(LINK_WINE) -o $@
-
-lin-vst-servertrack32.exe: lin-vst-server.wine32.o remotepluginserver.wine32.o paths.wine32.o
-	$(WINECXX) -m32 $^ $(LINK_WINE32) -o $@
 
 # --------------------------------------------------------------
 
@@ -65,17 +59,6 @@ remotepluginserver.wine.o: remotepluginserver.cpp
 paths.wine.o: paths.cpp
 	$(WINECXX) $(BUILD_FLAGS_WIN) -c $^ -o $@
 
-lin-vst-server.wine32.o: lin-vst-server.cpp
-	$(WINECXX) $(BUILD_FLAGS_WIN32) -c $^ -o $@
-
-remotepluginserver.wine32.o: remotepluginserver.cpp
-	$(WINECXX) $(BUILD_FLAGS_WIN32) -c $^ -o $@
-
-paths.wine32.o: paths.cpp
-	$(WINECXX) $(BUILD_FLAGS_WIN32) -c $^ -o $@
-
-
-
 clean:
 	rm -fR *.o *.exe *.so vst $(TARGETS)
 
@@ -84,4 +67,4 @@ install:
 	install -d $(VST_DIR)
 	install -m 755 linvst.so $(VST_DIR)
 	install -m 755 lin-vst-servertrack.exe lin-vst-servertrack.exe.so $(BIN_DIR)
-	install -m 755 lin-vst-servertrack32.exe lin-vst-servertrack32.exe.so $(BIN_DIR)
+
